# wasmtime-component-serde

./: Cargo.toml  README.md
src/: de.rs  lib.rs  ser.rs
tests/: round_trip.rs
